# MLLM-House-Search

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  house_image_associations.json  house_image_pipeline.py  image_to_text.sbatch  pyproject.toml  requirements.txt
app/: README.md  main.py  streamlit_app.py
app/settings/: env.py
common/: __init__.py  utils.py
data/: house_image_associations.json
image_to_text_pipeline/: Readme.md  houses_processed.csv  image_to_text.sbatch  main.py  parquet_to_csv.py  parser.py  prompt.txt  requiremens.txt  requirements.txt
image_to_text_pipeline/config/: __init__.py
image_to_text_pipeline/core/: __init__.py  generator.py  stopping.py
image_to_text_pipeline/pipeline/: __init__.py  workers.py  writer.py
text_to_embedding_pipeline/: main.py  text_to_embedding.sbatch
